# indiciario

./: .env.example  .gitignore  AGENTS.md  AUDITORIA_DE_CONFORMIDADE.md  CLAUDE.md  README.md  SPEC-CONSTITUTION.md  exemplo_blueprint.json  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  teste_renderer.py  validator.py  variaveis html.txt
.ai/: ISSUE_TEMPLATE.md
.claude/: SKILL.md
calibration/: bundle_hashes.json  expected_uma_noite_sem_flores.json
docs/: AGENT_SKILLS.md  ANTI_OBVIEDADE.md  ARTIFACT_VISIBILITY_POLICY.md  AUDITORIA_FABLE_2026-07.md  AURORA_PIPELINE_RUN.md  BLIND_CONTEXT_PROTOCOL.md  BLIND_SOLVER_HARNESS.md  BLUEPRINT_AUTHORING_GUIDE.md  CALIBRACAO_REFERENCIA_EXTERNA.md  CANONICAL_CRITERIA.md  CASE_DESIGN_PIPELINE.md  CASE_FAILURE_PATTERNS.md  CASE_GENERATION_WORKFLOW.md  CASE_KERNEL.md  CASE_REVIEW.md  DIAGNOSTICO_CALIBRACAO_33.10.md  DIEGESE_DOCUMENTAL.md  DIFFICULTY_FRAMEWORK.md  DIRETRIZES_EDITORIAIS.md  ESTADO_ATUAL.md  EXPERIMENTO_GERACAO_DO_ZERO.md  FINTECH_PIPELINE_RUN.md  FLOORPLANS.md  GUIA_CODIGOS_ERROS.md  IMPLEMENTATION_PLAN_MULTIAGENT_PIPELINE.md  INDICE_DOCUMENTACAO.md  LLM_CONTEXT.md  LLM_OPERATING_MANUAL.md  MULTIAGENT_ARTIFACT_RUN_CONTRACTS.md  MULTIAGENT_OPERATING_PROTOCOL.md  PRD_MULTIAGENT_CASE_CREATION.md  PRINTABLES.md  QUALITY_COMPARATIVE_REPORT.md  ROADMAP.md  SIGNATURES_AND_HANDWRITING.md  VISUAL_LIBRARY_2_0.md  VISUAL_SYSTEM.md
examples/: caixa_azul_bistro_blueprint.json  caso_canonico_iniciante.json  caso_canonico_iniciante_b.json  caso_canonico_intermediario.json  caso_canonico_intermediario_ii.json  (+11 more)
(+1166 files in other folders)
