[project]
name = "indiciarios"
version = "0.1.0"
description = "Gerador de mistérios investigativos em formato de dossiê."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "black>=24.0",
]
render = [
    "weasyprint>=62.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
